fix: center feature container and left-align text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -820,9 +820,8 @@ form label {
   float: left;
   width: 80%;
   margin-top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: block;
+  text-align: left;
 }
 
 /* Optimized service tabs spacing */
@@ -850,13 +849,15 @@ form label {
 @media screen and (max-width: 768px) {
   .feature-left {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     margin-bottom: 20px;
   }
   .feature-left .icon {
     width: 30px;
     height: 30px;
-    margin-right: 15px;
+    margin: 0 0 15px 0;
     padding: 0;
     display: flex;
     align-items: center;
@@ -864,9 +865,10 @@ form label {
     flex-shrink: 0;
   }
   .feature-left .feature-copy {
-    flex: 1;
+    width: 100%;
     padding: 0;
     margin: 0;
+    text-align: left;
   }
   .feature-left .feature-copy h3 {
     margin: 0 0 5px 0;
